# simi-lang

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  justfile
crates/simi-analysis/: Cargo.toml  README.md
crates/simi-lsp/: Cargo.toml  README.md
crates/simi-syntax/: Cargo.toml  simi.ungram
crates/simi-xtask/: Cargo.toml
docs/: build-language-tour.py  justfile  language-tour.md  type-system.md
docs/language-tour/: control-flow-and-patterns.md  errors-and-embedding.md  expressions.md  functions-and-bindings.md  hello-world.md  iterators.md  modules.md  mutation-and-copies.md  optional-types.md  order.txt  text-io.md  types-and-analysis.md  values.md
editors/: README.md  justfile
editors/tree-sitter/: README.md  grammar.js  justfile  package-lock.json  package.json  tree-sitter.json
editors/vscode/: .vscodeignore  README.md  justfile  language-configuration.json  package-lock.json  (+1 more)
examples/: fibonacci.simi  language-tour.simi
src/: ast.rs  cli.rs  engine.rs  environment.rs  error.rs  interpreter.rs  lexer.rs  lib.rs  lower.rs  main.rs  module.rs  native.rs  parser.rs  runtime.rs  span.rs  stdlib.rs  value.rs
stdlib/: io.simi  iter.simi  list.simi  map.simi  number.simi  string.simi
tests/: anonymous_functions.rs  assignments.rs  cli_subcommands.rs  destructuring_let.rs  erased_typing.rs  errors.rs  higher_order_lists.rs  lists.rs  loops.rs  map_module.rs  maps.rs  matches.rs  modules.rs  nil_control_flow.rs  number_module.rs  operators.rs  public_api.rs  runtime_is.rs  runtime_type.rs  shadowing.rs  stdio_cli.rs  strings.rs  tables.rs
(+124 files in other folders)
