[package]
name = "simi"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A small embeddable scripting language with expression-oriented control flow"
license = "MIT"
repository = "https://github.com/Microwave-WYB/simi-lang"
homepage = "https://github.com/Microwave-WYB/simi-lang"
readme = "README.md"
keywords = ["language", "scripting", "interpreter", "embedding"]
categories = ["compilers", "command-line-utilities"]

[[bin]]
name = "simi"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
gc = { version = "0.5", features = ["derive", "unstable-stats"] }
gc_derive = "0.5"
simi-lsp = { path = "crates/simi-lsp" }
simi-syntax = { path = "crates/simi-syntax" }

[workspace]
members = [".", "crates/simi-analysis", "crates/simi-lsp", "crates/simi-syntax", "crates/simi-xtask"]
default-members = ["."]
exclude = ["editors/zed"]
resolver = "3"
